<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Strings -->
    <string name="app_name">Holiday Cards</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_blank">Holiday Cards</string>

    <!-- Home Activity Strings -->
    <string name="step1">Step 1:</string>
    <string name="step2">Step 2:</string>
    <string name="step3">Step 3:</string>
    <string name="instructions1">Select a photo</string>
    <string name="instructions2">Select a holiday greeting</string>
    <string name="instructions3">Send your holiday card to a friend!</string>
    <string name="start_button_text">Get Started</string>

    <!-- PopupExamples Activity Strings -->
    <string name="dialog_example_message">This is a Dialog!</string>
    <string name="dialog_example_title">Example Dialog</string>
    <string name="dialog_example_ok">Okie dokes</string>
    <string name="dialog_example_cancel">Cancel that shiz</string>
    <string name="notification_tickertext">You have a new notification!</string>
    <string name="toast">Toast</string>
    <string name="dialog">Dialog</string>
    <string name="notification">Notification</string>
    <string name="menu_popups">Popups</string>

    <!-- Main Activity Strings -->
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>

    <!-- MP3 Activity Strings -->
    <string name="start_music">Start</string>
    <string name="stop_music">Stop</string>
    <string name="menu_music">Music</string>

    <!-- Misc Strings -->

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_prefs">PrefsActivity</string>
    <string name="title_activity_async">AsyncActivity</string>
    <string name="menu_async">Async</string>

</resources>