<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/toast_example_button"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/toast"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/dialog_example_button"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/dialog"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/notification_example_button"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/notification"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

</LinearLayout>